# TAGGED_UNION

./: CMakeLists.txt  LICENSE  README.md
include/: tagged_union.hpp
tests/: CMakeLists.txt  constexpr.cpp  empty.cpp  pair.cpp  pointer.cpp  simple.cpp  string.cpp
